# markov_chains

./: CMakeLists.txt  README.md  generator  linked_list.c  makefile  markov_chain.c  markov_chain.h  out.txt  print.c  print.h  s2.c  snake_and_ladders  snakes_and_ladders  snakes_and_ladders.c  tweets_generator  tweets_generator.c
